force-app/main/default/objects/C1ASCloudConnectorConfig__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Key__c</fullName>
        <label>Key</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Type of custom setting to be used in value query.</description>
        <label>Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value10__c</fullName>
        <label>Value10</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value2__c</fullName>
        <description>Value to be stored away for later query, value 1-5 will be Concatenated and returned as 1 string</description>
        <label>Value2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value3__c</fullName>
        <description>Value to be stored away for later query, value 1-5 will be Concatenated and returned as 1 string</description>
        <label>Value3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>C1ASCloudConnectorConfig</label>
</CustomObject>